# nix-templates

./: .gitignore  AGENTS.md  README.md  flake.nix
cplusplus/: .clang-format  .gitignore  CMakeLists.txt  flake.nix  init-project.nix
cplusplus/include/: bead_sort.h
cplusplus/src/: CMakeLists.txt  main.cpp
cplusplus/src/sorts/: CMakeLists.txt  bead_sort.cpp
cplusplus/tests/: CMakeLists.txt  test_bead_sort.cpp
haskell/: .gitignore  flake.nix  haskell.cabal  hie.yaml
haskell/app/: Main.hs
haskell/src/Sorts/: BeadSort.hs
haskell/test/: Spec.hs
modern-c/: .gitignore  Makefile  flake.nix
modern-c/include/: bead_sort.h
modern-c/src/: main.c
modern-c/src/sorts/: bead_sort.c
modern-c/tests/: test_bead_sort.c
python/: .envrc  AGENTS.md  README.md  dev-requirements.txt  flake.nix  init-project.nix  pyproject.toml
python/src/: main.py
python/src/sorts/: __init__.py  bead_sort.py
python/tests/: test_sorts.py
rust/: AGENTS.md  flake.nix
rust/src/: main.rs
rust/tests/: test_bead_sort.rs
typescript/: .envrc  .gitignore  AGENTS.md  README.md  eslint.config.js  flake.nix  init-project.nix  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
typescript/backend/: package.json  tsconfig.json
typescript/backend/src/: server.ts
typescript/frontend/: index.html  package.json  vite.config.ts
typescript/frontend/src/: main.ts
typescript/src/client/: App.tsx  index.html
typescript/src/server/: index.test.ts  index.ts
zig/: .gitignore
